[VP] Border was improoved accordind to the site review

--- a/lesli/content/pages/index.html
+++ b/lesli/content/pages/index.html
@@ -72,8 +72,8 @@
                                     rowspan="2">
                                     2019
                                 </th>
-                                <th data-ng-if="activeYear === 3" colspan="13">2020</th>
-                                <th colspan="13">2021</th>
+                                <th class="long_year" data-ng-if="activeYear === 3" colspan="13">2020</th>
+                                <th class="long_year" colspan="13">2021</th>
                             </tr>
                             <tr>
                                 <th data-ng-if="activeYear === 3"
