[VP] Details view was updated

--- a/lesli/content/pages/index.html
+++ b/lesli/content/pages/index.html
@@ -267,6 +267,7 @@
                                     <th>#</th>
                                     <th>Компания</th>
                                     <th>Продукт</th>
+                                    <th>Месяц</th>
                                     <th>2021</th>
                                     <th>2022</th>
                                     <th>Процент</th>
@@ -276,6 +277,7 @@
                                 <td>{{$index + 1}}</td>
                                 <td>{{object.companyName}}</td>
                                 <td>{{object.productName}}</td>
+                                <td>{{object.month}}</td>
                                 <td>{{object[2021]}}</td>
                                 <td>{{object[2022]}}</td>
                                 <td>{{object.percent}}%</td>
