--- a/lesli/content/pages/index.html
+++ b/lesli/content/pages/index.html
@@ -182,9 +182,9 @@
                         <tr data-ng-repeat="object in itemList | limitTo:quantity">
                             <td>{{$index + 1}}</td>
                             <td>{{object.name}}</td>
-                            <td data-ng-if="activeYear === 5">{{object.data['2018'].total}}</td>
-                            <td data-ng-if="activeYear === 5">{{object.data['2019'].total}}</td>
-                            <td data-ng-if="activeYear === 3 || activeYear === 5">{{object.data['2020'].total}}</td>
+                            <td data-ng-click="showDetails(object.name, 'Итог', 2018)" data-ng-if="activeYear === 5">{{object.data['2018'].total}}</td>
+                            <td data-ng-click="showDetails(object.name, 'Итог', 2019)" data-ng-if="activeYear === 5">{{object.data['2019'].total}}</td>
+                            <td data-ng-click="showDetails(object.name, 'Итог', 2020)" data-ng-if="activeYear === 3 || activeYear === 5">{{object.data['2020'].total}}</td>
                             <td data-ng-click="showDetails(object.name, 'Jan', 2021)" data-ng-if="activeYear === 3 || activeYear === 5">{{object.data['2021'].Jan}}</td>
                             <td data-ng-click="showDetails(object.name, 'Feb', 2021)" data-ng-if="activeYear === 3 || activeYear === 5">{{object.data['2021'].Feb}}</td>
                             <td data-ng-click="showDetails(object.name, 'Mar', 2021)" data-ng-if="activeYear === 3 || activeYear === 5">{{object.data['2021'].Mar}}</td>
@@ -197,7 +197,7 @@
                             <td data-ng-click="showDetails(object.name, 'Oct', 2021)" data-ng-if="activeYear === 3 || activeYear === 5">{{object.data['2021'].Oct}}</td>
                             <td data-ng-click="showDetails(object.name, 'Nov', 2021)" data-ng-if="activeYear === 3 || activeYear === 5">{{object.data['2021'].Nov}}</td>
                             <td data-ng-click="showDetails(object.name, 'Dec', 2021)" data-ng-if="activeYear === 3 || activeYear === 5">{{object.data['2021'].Dec}}</td>
-                            <td data-ng-if="activeYear === 3 || activeYear === 5">{{object.data['2021'].total}}</td>
+                            <td data-ng-click="showDetails(object.name, 'Итог', 2021)" data-ng-if="activeYear === 3 || activeYear === 5">{{object.data['2021'].total}}</td>
                             <td data-ng-click="showDetails(object.name, 'Jan', 2022)">{{object.data['2022'].Jan}}</td>
                             <td data-ng-click="showDetails(object.name, 'Feb', 2022)">{{object.data['2022'].Feb}}</td>
                             <td data-ng-click="showDetails(object.name, 'Mar', 2022)">{{object.data['2022'].Mar}}</td>
@@ -210,7 +210,7 @@
                             <td data-ng-click="showDetails(object.name, 'Oct', 2022)">{{object.data['2022'].Oct}}</td>
                             <td data-ng-click="showDetails(object.name, 'Nov', 2022)">{{object.data['2022'].Nov}}</td>
                             <td data-ng-click="showDetails(object.name, 'Dec', 2022)">{{object.data['2022'].Dec}}</td>
-                            <td>{{object.data['2022'].total}}</td>
+                            <td data-ng-click="showDetails(object.name, 'Итог', 2022)">{{object.data['2022'].total}}</td>
                         </tr>
                     </table>
                 </div>
