[VP] Details view was added for total (all years)

--- a/lesli/content/pages/index.html
+++ b/lesli/content/pages/index.html
@@ -293,7 +293,7 @@
             <p class="detailsMonth">{{details.month}} {{details.year}}</p>
             <img class="detailsClose" data-ng-click="closeDetailsPopup()" src="../../etc/images/cancel.png"/>
             <div>
-                <table class="table">
+                <table class="table popup-table">
                     <thead>
                     <tr>
                         <th>#</th>
