--- a/lesli/content/pages/index.html
+++ b/lesli/content/pages/index.html
@@ -239,7 +239,7 @@
                                 <th data-ng-class="{'activeOrderField': currentOrderName === 'data[2022].total'}"
                                     data-ng-click="orderByField('data[2022].total')">2022
                                 </th>
-                                <th data-ng-class="{'activeOrderField': currentOrderName === 'total'}"
+                                <th data-ng-if="activeYear !== 1" data-ng-class="{'activeOrderField': currentOrderName === 'total'}"
                                     data-ng-click="orderByField('total')">Итого
                                 </th>
                             </tr>
@@ -247,14 +247,13 @@
                         <tr data-ng-repeat="object in itemList | limitTo:quantity">
                             <td>{{$index + 1}}</td>
                             <td>{{object.name}}</td>
-                            <td data-ng-if="activeYear === 5">{{object.data['2018'].total}}</td>
-                            <td data-ng-if="activeYear === 5">{{object.data['2019'].total}}</td>
-                            <td data-ng-if="activeYear === 3 || activeYear === 5">{{object.data['2020'].total}}</td>
-                            <td data-ng-if="activeYear === 3 || activeYear === 5">{{object.data['2021'].total}}</td>
-                            <td>{{object.data['2022'].total}}</td>
-                            <td data-ng-if="activeYear === 1">{{object.data['2022'].total}}</td>
-                            <td data-ng-if="activeYear === 3">{{round(object.data['2020'].total + object.data['2021'].total + object.data['2022'].total)}}</td>
-                            <td data-ng-if="activeYear === 5">{{round(object.data['2018'].total + object.data['2019'].total + object.data['2020'].total + object.data['2021'].total + object.data['2022'].total)}}</td>
+                            <td data-ng-click="showDetails(object.name, 'Итог', 2018)" data-ng-if="activeYear === 5">{{object.data['2018'].total}}</td>
+                            <td data-ng-click="showDetails(object.name, 'Итог', 2019)" data-ng-if="activeYear === 5">{{object.data['2019'].total}}</td>
+                            <td data-ng-click="showDetails(object.name, 'Итог', 2020)" data-ng-if="activeYear === 3 || activeYear === 5">{{object.data['2020'].total}}</td>
+                            <td data-ng-click="showDetails(object.name, 'Итог', 2021)" data-ng-if="activeYear === 3 || activeYear === 5">{{object.data['2021'].total}}</td>
+                            <td data-ng-click="showDetails(object.name, 'Итог', 2022)">{{object.data['2022'].total}}</td>
+                            <td data-ng-click="showDetails(object.name, 'Итог')" data-ng-if="activeYear === 3">{{round(object.data['2020'].total + object.data['2021'].total + object.data['2022'].total)}}</td>
+                            <td data-ng-click="showDetails(object.name, 'Итог')" data-ng-if="activeYear === 5">{{round(object.data['2018'].total + object.data['2019'].total + object.data['2020'].total + object.data['2021'].total + object.data['2022'].total)}}</td>
                         </tr>
                     </table>
                 </div>
