--- a/consigliere/index.html
+++ b/consigliere/index.html
@@ -5,200 +5,208 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <h1>Consigliere 2023</h1>
-    <div class="game">
-        <p>Игра 1</p>
-        <div class="mafia-table">
-            <p>Стол 1</p>
-            <table>
-                <tr><td>1</td><td>Хочу тебя обнимать</td></tr>
-                <tr><td>2</td><td>Team2</td></tr>
-                <tr><td>3</td><td>Team3</td></tr>
-                <tr><td>4</td><td>Team4</td></tr>
-                <tr><td>5</td><td>Team5</td></tr>
-                <tr><td>6</td><td>Team6</td></tr>
-                <tr><td>7</td><td>Team7</td></tr>
-                <tr><td>8</td><td>Team8</td></tr>
-                <tr><td>9</td><td>Team9</td></tr>
-                <tr><td>10</td><td>Team10</td></tr>
-            </table>
-        </div>
-        <div class="mafia-table">
-            <p>Стол 2</p>
-            <table>
-                <tr><td>1</td><td>Team Name Number 1</td></tr>
-                <tr><td>2</td><td>Team2</td></tr>
-                <tr><td>3</td><td>Team3</td></tr>
-                <tr><td>4</td><td>Team4</td></tr>
-                <tr><td>5</td><td>Team5</td></tr>
-                <tr><td>6</td><td>Team6</td></tr>
-                <tr><td>7</td><td>Team7</td></tr>
-                <tr><td>8</td><td>Team8</td></tr>
-                <tr><td>9</td><td>Team9</td></tr>
-                <tr><td>10</td><td>Team10</td></tr>
-            </table>
-        </div>
-        <div class="mafia-table">
-            <p>Стол 3</p>
-            <table>
-                <tr><td>1</td><td>Team Name Number 1</td></tr>
-                <tr><td>2</td><td>Team2</td></tr>
-                <tr><td>3</td><td>Team3</td></tr>
-                <tr><td>4</td><td>Team4</td></tr>
-                <tr><td>5</td><td>Team5</td></tr>
-                <tr><td>6</td><td>Team6</td></tr>
-                <tr><td>7</td><td>Team7</td></tr>
-                <tr><td>8</td><td>Team8</td></tr>
-                <tr><td>9</td><td>Team9</td></tr>
-                <tr><td>10</td><td>Team10</td></tr>
-            </table>
-        </div>
+    <div>
+        <h1 id="title">Consigliere 2023</h1>
+        <a href="#game-1">Игра 1</a>
+        <a href="#game-2">Игра 2</a>
+        <a href="#game-3">Игра 3</a>
+        <a href="#game-4">Игра 4</a>
+        <a href="#game-5">Игра 5</a>
     </div>
-    <div class="game">
-        <p>Игра 2</p>
-        <div class="mafia-table">
-            <p>Стол 1</p>
-            <table>
-                <tr><td>1</td><td>Team Name Number 1</td></tr>
-                <tr><td>2</td><td>Team2</td></tr>
-                <tr><td>3</td><td>Team3</td></tr>
-                <tr><td>4</td><td>Team4</td></tr>
-                <tr><td>5</td><td>Team5</td></tr>
-                <tr><td>6</td><td>Team6</td></tr>
-                <tr><td>7</td><td>Team7</td></tr>
-                <tr><td>8</td><td>Team8</td></tr>
-                <tr><td>9</td><td>Team9</td></tr>
-                <tr><td>10</td><td>Team10</td></tr>
-            </table>
+    <div class="content">
+        <div id="game-1" class="game">
+            <p>Игра 1</p>
+            <div class="mafia-table">
+                <p>Стол 1</p>
+                <table>
+                    <tr><td>1</td><td>Хочу тебя обнимать</td></tr>
+                    <tr><td>2</td><td>Team2</td></tr>
+                    <tr><td>3</td><td>Team3</td></tr>
+                    <tr><td>4</td><td>Team4</td></tr>
+                    <tr><td>5</td><td>Team5</td></tr>
+                    <tr><td>6</td><td>Team6</td></tr>
+                    <tr><td>7</td><td>Team7</td></tr>
+                    <tr><td>8</td><td>Team8</td></tr>
+                    <tr><td>9</td><td>Team9</td></tr>
+                    <tr><td>10</td><td>Team10</td></tr>
+                </table>
+            </div>
+            <div class="mafia-table">
+                <p>Стол 2</p>
+                <table>
+                    <tr><td>1</td><td>Team Name Number 1</td></tr>
+                    <tr><td>2</td><td>Team2</td></tr>
+                    <tr><td>3</td><td>Team3</td></tr>
+                    <tr><td>4</td><td>Team4</td></tr>
+                    <tr><td>5</td><td>Team5</td></tr>
+                    <tr><td>6</td><td>Team6</td></tr>
+                    <tr><td>7</td><td>Team7</td></tr>
+                    <tr><td>8</td><td>Team8</td></tr>
+                    <tr><td>9</td><td>Team9</td></tr>
+                    <tr><td>10</td><td>Team10</td></tr>
+                </table>
+            </div>
+            <div class="mafia-table">
+                <p>Стол 3</p>
+                <table>
+                    <tr><td>1</td><td>Team Name Number 1</td></tr>
+                    <tr><td>2</td><td>Team2</td></tr>
+                    <tr><td>3</td><td>Team3</td></tr>
+                    <tr><td>4</td><td>Team4</td></tr>
+                    <tr><td>5</td><td>Team5</td></tr>
+                    <tr><td>6</td><td>Team6</td></tr>
+                    <tr><td>7</td><td>Team7</td></tr>
+                    <tr><td>8</td><td>Team8</td></tr>
+                    <tr><td>9</td><td>Team9</td></tr>
+                    <tr><td>10</td><td>Team10</td></tr>
+                </table>
+            </div>
         </div>
-        <div class="mafia-table">
-            <p>Стол 2</p>
-            <table>
-                <tr><td>1</td><td>Team Name Number 1</td></tr>
-                <tr><td>2</td><td>Team2</td></tr>
-                <tr><td>3</td><td>Team3</td></tr>
-                <tr><td>4</td><td>Team4</td></tr>
-                <tr><td>5</td><td>Team5</td></tr>
-                <tr><td>6</td><td>Team6</td></tr>
-                <tr><td>7</td><td>Team7</td></tr>
-                <tr><td>8</td><td>Team8</td></tr>
-                <tr><td>9</td><td>Team9</td></tr>
-                <tr><td>10</td><td>Team10</td></tr>
-            </table>
+        <div id="game-2" class="game">
+            <p>Игра 2</p>
+            <div class="mafia-table">
+                <p>Стол 1</p>
+                <table>
+                    <tr><td>1</td><td>Team Name Number 1</td></tr>
+                    <tr><td>2</td><td>Team2</td></tr>
+                    <tr><td>3</td><td>Team3</td></tr>
+                    <tr><td>4</td><td>Team4</td></tr>
+                    <tr><td>5</td><td>Team5</td></tr>
+                    <tr><td>6</td><td>Team6</td></tr>
+                    <tr><td>7</td><td>Team7</td></tr>
+                    <tr><td>8</td><td>Team8</td></tr>
+                    <tr><td>9</td><td>Team9</td></tr>
+                    <tr><td>10</td><td>Team10</td></tr>
+                </table>
+            </div>
+            <div class="mafia-table">
+                <p>Стол 2</p>
+                <table>
+                    <tr><td>1</td><td>Team Name Number 1</td></tr>
+                    <tr><td>2</td><td>Team2</td></tr>
+                    <tr><td>3</td><td>Team3</td></tr>
+                    <tr><td>4</td><td>Team4</td></tr>
+                    <tr><td>5</td><td>Team5</td></tr>
+                    <tr><td>6</td><td>Team6</td></tr>
+                    <tr><td>7</td><td>Team7</td></tr>
+                    <tr><td>8</td><td>Team8</td></tr>
+                    <tr><td>9</td><td>Team9</td></tr>
+                    <tr><td>10</td><td>Team10</td></tr>
+                </table>
+            </div>
+            <div class="mafia-table">
+                <p>Стол 3</p>
+                <table>
+                    <tr><td>1</td><td>Team Name Number 1</td></tr>
+                    <tr><td>2</td><td>Team2</td></tr>
+                    <tr><td>3</td><td>Team3</td></tr>
+                    <tr><td>4</td><td>Team4</td></tr>
+                    <tr><td>5</td><td>Team5</td></tr>
+                    <tr><td>6</td><td>Team6</td></tr>
+                    <tr><td>7</td><td>Team7</td></tr>
+                    <tr><td>8</td><td>Team8</td></tr>
+                    <tr><td>9</td><td>Team9</td></tr>
+                    <tr><td>10</td><td>Team10</td></tr>
+                </table>
+            </div>
         </div>
-        <div class="mafia-table">
-            <p>Стол 3</p>
-            <table>
-                <tr><td>1</td><td>Team Name Number 1</td></tr>
-                <tr><td>2</td><td>Team2</td></tr>
-                <tr><td>3</td><td>Team3</td></tr>
-                <tr><td>4</td><td>Team4</td></tr>
-                <tr><td>5</td><td>Team5</td></tr>
-                <tr><td>6</td><td>Team6</td></tr>
-                <tr><td>7</td><td>Team7</td></tr>
-                <tr><td>8</td><td>Team8</td></tr>
-                <tr><td>9</td><td>Team9</td></tr>
-                <tr><td>10</td><td>Team10</td></tr>
-            </table>
+        <div id="game-3" class="game">
+            <p>Игра 3</p>
+            <div class="mafia-table">
+                <p>Стол 1</p>
+                <table>
+                    <tr><td>1</td><td>Team Name Number 1</td></tr>
+                    <tr><td>2</td><td>Team2</td></tr>
+                    <tr><td>3</td><td>Team3</td></tr>
+                    <tr><td>4</td><td>Team4</td></tr>
+                    <tr><td>5</td><td>Team5</td></tr>
+                    <tr><td>6</td><td>Team6</td></tr>
+                    <tr><td>7</td><td>Team7</td></tr>
+                    <tr><td>8</td><td>Team8</td></tr>
+                    <tr><td>9</td><td>Team9</td></tr>
+                    <tr><td>10</td><td>Team10</td></tr>
+                </table>
+            </div>
+            <div class="mafia-table">
+                <p>Стол 2</p>
+                <table>
+                    <tr><td>1</td><td>Team Name Number 1</td></tr>
+                    <tr><td>2</td><td>Team2</td></tr>
+                    <tr><td>3</td><td>Team3</td></tr>
+                    <tr><td>4</td><td>Team4</td></tr>
+                    <tr><td>5</td><td>Team5</td></tr>
+                    <tr><td>6</td><td>Team6</td></tr>
+                    <tr><td>7</td><td>Team7</td></tr>
+                    <tr><td>8</td><td>Team8</td></tr>
+                    <tr><td>9</td><td>Team9</td></tr>
+                    <tr><td>10</td><td>Team10</td></tr>
+                </table>
+            </div>
+            <div class="mafia-table">
+                <p>Стол 3</p>
+                <table>
+                    <tr><td>1</td><td>Team Name Number 1</td></tr>
+                    <tr><td>2</td><td>Team2</td></tr>
+                    <tr><td>3</td><td>Team3</td></tr>
+                    <tr><td>4</td><td>Team4</td></tr>
+                    <tr><td>5</td><td>Team5</td></tr>
+                    <tr><td>6</td><td>Team6</td></tr>
+                    <tr><td>7</td><td>Team7</td></tr>
+                    <tr><td>8</td><td>Team8</td></tr>
+                    <tr><td>9</td><td>Team9</td></tr>
+                    <tr><td>10</td><td>Team10</td></tr>
+                </table>
+            </div>
         </div>
-    </div>
-    <div class="game">
-        <p>Игра 3</p>
-        <div class="mafia-table">
-            <p>Стол 1</p>
-            <table>
-                <tr><td>1</td><td>Team Name Number 1</td></tr>
-                <tr><td>2</td><td>Team2</td></tr>
-                <tr><td>3</td><td>Team3</td></tr>
-                <tr><td>4</td><td>Team4</td></tr>
-                <tr><td>5</td><td>Team5</td></tr>
-                <tr><td>6</td><td>Team6</td></tr>
-                <tr><td>7</td><td>Team7</td></tr>
-                <tr><td>8</td><td>Team8</td></tr>
-                <tr><td>9</td><td>Team9</td></tr>
-                <tr><td>10</td><td>Team10</td></tr>
-            </table>
+        <div id="game-4" class="game">
+            <p>Игра 4</p>
+            <div class="mafia-table">
+                <p>Стол 1</p>
+                <table>
+                    <tr><td>1</td><td>Team Name Number 1</td></tr>
+                    <tr><td>2</td><td>Team2</td></tr>
+                    <tr><td>3</td><td>Team3</td></tr>
+                    <tr><td>4</td><td>Team4</td></tr>
+                    <tr><td>5</td><td>Team5</td></tr>
+                    <tr><td>6</td><td>Team6</td></tr>
+                    <tr><td>7</td><td>Team7</td></tr>
+                    <tr><td>8</td><td>Team8</td></tr>
+                    <tr><td>9</td><td>Team9</td></tr>
+                    <tr><td>10</td><td>Team10</td></tr>
+                </table>
+            </div>
+            <div class="mafia-table">
+                <p>Стол 2</p>
+                <table>
+                    <tr><td>1</td><td>Team Name Number 1</td></tr>
+                    <tr><td>2</td><td>Team2</td></tr>
+                    <tr><td>3</td><td>Team3</td></tr>
+                    <tr><td>4</td><td>Team4</td></tr>
+                    <tr><td>5</td><td>Team5</td></tr>
+                    <tr><td>6</td><td>Team6</td></tr>
+                    <tr><td>7</td><td>Team7</td></tr>
+                    <tr><td>8</td><td>Team8</td></tr>
+                    <tr><td>9</td><td>Team9</td></tr>
+                    <tr><td>10</td><td>Team10</td></tr>
+                </table>
+            </div>
+            <div class="mafia-table">
+                <p>Стол 3</p>
+                <table>
+                    <tr><td>1</td><td>Team Name Number 1</td></tr>
+                    <tr><td>2</td><td>Team2</td></tr>
+                    <tr><td>3</td><td>Team3</td></tr>
+                    <tr><td>4</td><td>Team4</td></tr>
+                    <tr><td>5</td><td>Team5</td></tr>
+                    <tr><td>6</td><td>Team6</td></tr>
+                    <tr><td>7</td><td>Team7</td></tr>
+                    <tr><td>8</td><td>Team8</td></tr>
+                    <tr><td>9</td><td>Team9</td></tr>
+                    <tr><td>10</td><td>Team10</td></tr>
+                </table>
+            </div>
         </div>
-        <div class="mafia-table">
-            <p>Стол 2</p>
-            <table>
-                <tr><td>1</td><td>Team Name Number 1</td></tr>
-                <tr><td>2</td><td>Team2</td></tr>
-                <tr><td>3</td><td>Team3</td></tr>
-                <tr><td>4</td><td>Team4</td></tr>
-                <tr><td>5</td><td>Team5</td></tr>
-                <tr><td>6</td><td>Team6</td></tr>
-                <tr><td>7</td><td>Team7</td></tr>
-                <tr><td>8</td><td>Team8</td></tr>
-                <tr><td>9</td><td>Team9</td></tr>
-                <tr><td>10</td><td>Team10</td></tr>
-            </table>
-        </div>
-        <div class="mafia-table">
-            <p>Стол 3</p>
-            <table>
-                <tr><td>1</td><td>Team Name Number 1</td></tr>
-                <tr><td>2</td><td>Team2</td></tr>
-                <tr><td>3</td><td>Team3</td></tr>
-                <tr><td>4</td><td>Team4</td></tr>
-                <tr><td>5</td><td>Team5</td></tr>
-                <tr><td>6</td><td>Team6</td></tr>
-                <tr><td>7</td><td>Team7</td></tr>
-                <tr><td>8</td><td>Team8</td></tr>
-                <tr><td>9</td><td>Team9</td></tr>
-                <tr><td>10</td><td>Team10</td></tr>
-            </table>
-        </div>
-    </div>
-    <div class="game">
-        <p>Игра 4</p>
-        <div class="mafia-table">
-            <p>Стол 1</p>
-            <table>
-                <tr><td>1</td><td>Team Name Number 1</td></tr>
-                <tr><td>2</td><td>Team2</td></tr>
-                <tr><td>3</td><td>Team3</td></tr>
-                <tr><td>4</td><td>Team4</td></tr>
-                <tr><td>5</td><td>Team5</td></tr>
-                <tr><td>6</td><td>Team6</td></tr>
-                <tr><td>7</td><td>Team7</td></tr>
-                <tr><td>8</td><td>Team8</td></tr>
-                <tr><td>9</td><td>Team9</td></tr>
-                <tr><td>10</td><td>Team10</td></tr>
-            </table>
-        </div>
-        <div class="mafia-table">
-            <p>Стол 2</p>
-            <table>
-                <tr><td>1</td><td>Team Name Number 1</td></tr>
-                <tr><td>2</td><td>Team2</td></tr>
-                <tr><td>3</td><td>Team3</td></tr>
-                <tr><td>4</td><td>Team4</td></tr>
-                <tr><td>5</td><td>Team5</td></tr>
-                <tr><td>6</td><td>Team6</td></tr>
-                <tr><td>7</td><td>Team7</td></tr>
-                <tr><td>8</td><td>Team8</td></tr>
-                <tr><td>9</td><td>Team9</td></tr>
-                <tr><td>10</td><td>Team10</td></tr>
-            </table>
-        </div>
-        <div class="mafia-table">
-            <p>Стол 3</p>
-            <table>
-                <tr><td>1</td><td>Team Name Number 1</td></tr>
-                <tr><td>2</td><td>Team2</td></tr>
-                <tr><td>3</td><td>Team3</td></tr>
-                <tr><td>4</td><td>Team4</td></tr>
-                <tr><td>5</td><td>Team5</td></tr>
-                <tr><td>6</td><td>Team6</td></tr>
-                <tr><td>7</td><td>Team7</td></tr>
-                <tr><td>8</td><td>Team8</td></tr>
-                <tr><td>9</td><td>Team9</td></tr>
-                <tr><td>10</td><td>Team10</td></tr>
-            </table>
-        </div>
-    </div>
-    <div class="game">
+        <div id="game-5" class="game">
         <p>Игра 5</p>
         <div class="mafia-table">
             <p>Стол 1</p>
@@ -246,7 +254,8 @@
             </table>
         </div>
     </div>
+    </div>
+    <a href="#title">Go to top</a>
 </body>
 <footer>
-
 </footer>
