--- a/consigliere/index.html
+++ b/consigliere/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div>
+        <div class="header">
             <h1>Consigliere 2023</h1>
             <a href="#game-1">Игра 1</a>
             <a href="#game-2">Игра 2</a>
