[C] Image was added

--- a/consigliere/index.html
+++ b/consigliere/index.html
@@ -7,12 +7,15 @@
 <body>
     <div class="wrapper">
         <div class="header">
+            <img src="images/face.png">
             <h1>Consigliere 2023</h1>
-            <a href="#game-1">Игра 1</a>
-            <a href="#game-2">Игра 2</a>
-            <a href="#game-3">Игра 3</a>
-            <a href="#game-4">Игра 4</a>
-            <a href="#game-5">Игра 5</a>
+            <div>
+                <a href="#game-1">Игра 1</a>
+                <a href="#game-2">Игра 2</a>
+                <a href="#game-3">Игра 3</a>
+                <a href="#game-4">Игра 4</a>
+                <a href="#game-5">Игра 5</a>
+            </div>
         </div>
         <div>
             <div id="game-1" class="game">
