[C] Header size was updated

--- a/consigliere/index.html
+++ b/consigliere/index.html
@@ -71,7 +71,7 @@
                 <div class="mafia-table">
                     <p>Стол 1</p>
                     <table>
-                        <tr><td>1</td><td>Team Name Number 1</td></tr>
+                        <tr><td>1</td><td>Хочу тебя обнимать</td></tr>
                         <tr><td>2</td><td>Team2</td></tr>
                         <tr><td>3</td><td>Team3</td></tr>
                         <tr><td>4</td><td>Team4</td></tr>
