[C] Timetable was fully updated

--- a/consigliere/timetable.html
+++ b/consigliere/timetable.html
@@ -55,7 +55,7 @@
                 <table>
                     <tr><td>1</td><td>Хочу тебя обнимать</td></tr>
                     <tr><td>2</td><td>Руками не трогать, замечаний не делать</td></tr>
-                    <tr><td>3</td><td>Девочки💃💃</td></tr>
+                    <tr><td>3</td><td>Берем всё вино на себя</td></tr>
                     <tr><td>4</td><td>Компот из, сука, фруктов</td></tr>
                     <tr><td>5</td><td>Интроверты</td></tr>
                     <tr><td>6</td><td>Крут и пряник</td></tr>
@@ -92,7 +92,7 @@
                     <tr><td>4</td><td>Клан Бомбино</td></tr>
                     <tr><td>5</td><td>Брестолочи</td></tr>
                     <tr><td>6</td><td>Лучшие пупсики на вашу вечеринку</td></tr>
-                    <tr><td>7</td><td>Девочки💃💃</td></tr>
+                    <tr><td>7</td><td>Берем всё вино на себя</td></tr>
                     <tr><td>8</td><td>Mafia House</td></tr>
                     <tr><td>9</td><td>Крут и пряник</td></tr>
                     <tr><td>10</td><td>Давай по новой, Миша</td></tr>
@@ -126,7 +126,7 @@
                     <tr><td>5</td><td>KOD</td></tr>
                     <tr><td>6</td><td>Руками не трогать, замечаний не делать</td></tr>
                     <tr><td>7</td><td>Пёс да Лис 2.1</td></tr>
-                    <tr><td>8</td><td>Девочки💃💃</td></tr>
+                    <tr><td>8</td><td>Берем всё вино на себя</td></tr>
                     <tr><td>9</td><td>Светик-Правдоцветик</td></tr>
                     <tr><td>10</td><td>Top Gun</td></tr>
                 </table>
@@ -200,7 +200,7 @@
                     <tr><td>1</td><td>Ведьмы</td></tr>
                     <tr><td>2</td><td>Пёс да Лис 2.1</td></tr>
                     <tr><td>3</td><td>Креветки из Инетки</td></tr>
-                    <tr><td>4</td><td>Девочки💃💃</td></tr>
+                    <tr><td>4</td><td>Берем всё вино на себя</td></tr>
                     <tr><td>5</td><td>Интроверты</td></tr>
                     <tr><td>6</td><td>Война и мир</td></tr>
                     <tr><td>7</td><td>Крут и пряник</td></tr>
@@ -246,7 +246,7 @@
                 <p>Стол 3</p>
                 <table>
                     <tr><td>1</td><td>И. С. К.</td></tr>
-                    <tr><td>2</td><td>Девочки💃💃</td></tr>
+                    <tr><td>2</td><td>Берем всё вино на себя</td></tr>
                     <tr><td>3</td><td>Top Gun</td></tr>
                     <tr><td>4</td><td>PZ⚡DC</td></tr>
                     <tr><td>5</td><td>Mafia House</td></tr>
