[C] Total table  was fully updated

--- a/consigliere/total.html
+++ b/consigliere/total.html
@@ -3,6 +3,8 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="styles/main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="scripts/main.js"></script>
 </head>
 <body>
     <div class="total-wrapper">
@@ -14,132 +16,7 @@
             <div class="total">
                 <p>Итоги</p>
                 <div class="total-mafia-table">
-                    <table>
-                        <tr>
-                            <td colspan="2"></td><td>Игра 1</td><td>Игра 1</td><td>Игра 1</td><td>Игра 1</td><td>Игра 1</td>
-                            <td>Игра 1</td><td>Игра 1</td><td>Игра 1</td><td>Игра 1</td><td>Игра 1</td><td>Игра 1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                        <tr>
-                            <td>1</td><td>Хочу тебя обнимать</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                            <td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td>
-                        </tr>
-                    </table>
+
                 </div>
             </div>
         </div>
