[C] Test commit MAC

--- a/consigliere/total.html
+++ b/consigliere/total.html
@@ -15,9 +15,7 @@
         <div>
             <div class="total">
                 <p>Итоги</p>
-                <div class="total-mafia-table">
-
-                </div>
+                <div class="total-mafia-table"></div>
             </div>
         </div>
     </div>
