[C] The Witches team name was updated

--- a/consigliere/timetable.html
+++ b/consigliere/timetable.html
@@ -47,7 +47,7 @@
                     <tr><td>7</td><td>Black hole</td></tr>
                     <tr><td>8</td><td>Клан Бомбино</td></tr>
                     <tr><td>9</td><td>Пёс да Лис 2.1</td></tr>
-                    <tr><td>10</td><td>Ведьмы</td></tr>
+                    <tr><td>10</td><td>The Witches</td></tr>
                 </table>
             </div>
             <div class="mafia-table">
@@ -105,7 +105,7 @@
                     <tr><td>2</td><td>Война и мир</td></tr>
                     <tr><td>3</td><td>Компот из, сука, фруктов</td></tr>
                     <tr><td>4</td><td>Светик-Правдоцветик</td></tr>
-                    <tr><td>5</td><td>Ведьмы</td></tr>
+                    <tr><td>5</td><td>The Witches</td></tr>
                     <tr><td>6</td><td>Easy Win</td></tr>
                     <tr><td>7</td><td>Интроверты</td></tr>
                     <tr><td>8</td><td>Банальная сказка</td></tr>
@@ -122,7 +122,7 @@
                     <tr><td>1</td><td>OCISLY</td></tr>
                     <tr><td>2</td><td>Easy Win</td></tr>
                     <tr><td>3</td><td>Креветки из Инетки</td></tr>
-                    <tr><td>4</td><td>Ведьмы</td></tr>
+                    <tr><td>4</td><td>The Witches</td></tr>
                     <tr><td>5</td><td>KOD</td></tr>
                     <tr><td>6</td><td>Руками не трогать, замечаний не делать</td></tr>
                     <tr><td>7</td><td>Пёс да Лис 2.1</td></tr>
@@ -197,7 +197,7 @@
             <div class="mafia-table">
                 <p>Стол 3</p>
                 <table>
-                    <tr><td>1</td><td>Ведьмы</td></tr>
+                    <tr><td>1</td><td>The Witches</td></tr>
                     <tr><td>2</td><td>Пёс да Лис 2.1</td></tr>
                     <tr><td>3</td><td>Креветки из Инетки</td></tr>
                     <tr><td>4</td><td>Берем всё вино на себя</td></tr>
@@ -234,7 +234,7 @@
                     <tr><td>2</td><td>Интроверты</td></tr>
                     <tr><td>3</td><td>Котики</td></tr>
                     <tr><td>4</td><td>Светик-Правдоцветик</td></tr>
-                    <tr><td>5</td><td>Ведьмы</td></tr>
+                    <tr><td>5</td><td>The Witches</td></tr>
                     <tr><td>6</td><td>Хочу тебя обнимать</td></tr>
                     <tr><td>7</td><td>Black hole</td></tr>
                     <tr><td>8</td><td>Креветки из Инетки</td></tr>
