--- a/consigliere/timetable.html
+++ b/consigliere/timetable.html
@@ -42,11 +42,11 @@
                     <tr><td>2</td><td>Бандюги</td></tr>
                     <tr><td>3</td><td>KOD</td></tr>
                     <tr><td>4</td><td>Top Gun</td></tr>
-                    <tr><td>5</td><td>И. С. К.</td></tr>
+                    <tr><td>5</td><td>Мы спалим твою овцу</td></tr>
                     <tr><td>6</td><td>OCISLY</td></tr>
                     <tr><td>7</td><td>Black hole</td></tr>
                     <tr><td>8</td><td>Клан Бомбино</td></tr>
-                    <tr><td>9</td><td>Пёс да Лис 2.1</td></tr>
+                    <tr><td>9</td><td>Пёс да Лис 2.0</td></tr>
                     <tr><td>10</td><td>Ведьмы</td></tr>
                 </table>
             </div>
@@ -73,10 +73,10 @@
                 <table>
                     <tr><td>1</td><td>Суринамские мукоеды</td></tr>
                     <tr><td>2</td><td>Котики</td></tr>
-                    <tr><td>3</td><td>Пёс да Лис 2.1</td></tr>
+                    <tr><td>3</td><td>Пёс да Лис 2.0</td></tr>
                     <tr><td>4</td><td>PZ⚡DC</td></tr>
                     <tr><td>5</td><td>Креветки из Инетки</td></tr>
-                    <tr><td>6</td><td>И. С. К.</td></tr>
+                    <tr><td>6</td><td>Мы спалим твою овцу</td></tr>
                     <tr><td>7</td><td>Хочу тебя обнимать</td></tr>
                     <tr><td>8</td><td>KOD</td></tr>
                     <tr><td>9</td><td>DDniwe</td></tr>
@@ -125,7 +125,7 @@
                     <tr><td>4</td><td>Ведьмы</td></tr>
                     <tr><td>5</td><td>KOD</td></tr>
                     <tr><td>6</td><td>Руками не трогать, замечаний не делать</td></tr>
-                    <tr><td>7</td><td>Пёс да Лис 2.1</td></tr>
+                    <tr><td>7</td><td>Пёс да Лис 2.0</td></tr>
                     <tr><td>8</td><td>Берем всё вино на себя</td></tr>
                     <tr><td>9</td><td>Светик-Правдоцветик</td></tr>
                     <tr><td>10</td><td>Top Gun</td></tr>
@@ -151,7 +151,7 @@
                 <table>
                     <tr><td>1</td><td>Интроверты</td></tr>
                     <tr><td>2</td><td>Black hole</td></tr>
-                    <tr><td>3</td><td>И. С. К.</td></tr>
+                    <tr><td>3</td><td>Мы спалим твою овцу</td></tr>
                     <tr><td>4</td><td>Крут и пряник</td></tr>
                     <tr><td>5</td><td>Война и мир</td></tr>
                     <tr><td>6</td><td>Брестолочи</td></tr>
@@ -198,14 +198,14 @@
                 <p>Стол 3</p>
                 <table>
                     <tr><td>1</td><td>Ведьмы</td></tr>
-                    <tr><td>2</td><td>Пёс да Лис 2.1</td></tr>
+                    <tr><td>2</td><td>Пёс да Лис 2.0</td></tr>
                     <tr><td>3</td><td>Креветки из Инетки</td></tr>
                     <tr><td>4</td><td>Берем всё вино на себя</td></tr>
                     <tr><td>5</td><td>Интроверты</td></tr>
                     <tr><td>6</td><td>Война и мир</td></tr>
                     <tr><td>7</td><td>Крут и пряник</td></tr>
                     <tr><td>8</td><td>Светик-Правдоцветик</td></tr>
-                    <tr><td>9</td><td>И. С. К.</td></tr>
+                    <tr><td>9</td><td>Мы спалим твою овцу</td></tr>
                     <tr><td>10</td><td>Банальная сказка</td></tr>
                 </table>
             </div>
@@ -245,7 +245,7 @@
             <div class="mafia-table">
                 <p>Стол 3</p>
                 <table>
-                    <tr><td>1</td><td>И. С. К.</td></tr>
+                    <tr><td>1</td><td>Мы спалим твою овцу</td></tr>
                     <tr><td>2</td><td>Берем всё вино на себя</td></tr>
                     <tr><td>3</td><td>Top Gun</td></tr>
                     <tr><td>4</td><td>PZ⚡DC</td></tr>
@@ -254,7 +254,7 @@
                     <tr><td>7</td><td>Компот из, сука, фруктов</td></tr>
                     <tr><td>8</td><td>KOD</td></tr>
                     <tr><td>9</td><td>Клан Бомбино</td></tr>
-                    <tr><td>10</td><td>Пёс да Лис 2.1</td></tr>
+                    <tr><td>10</td><td>Пёс да Лис 2.0</td></tr>
                 </table>
             </div>
         </div>
